all except student

--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,17 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+ 
+  min-height: 13vh;
+  font-size: 26px !important;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 40px 37% ;
+}
+.center {
+  align-items: center;
+
+  justify-content: center;
 }
 
 .App-link {
